--- a/index.html
+++ b/index.html
@@ -24,12 +24,101 @@
         <main>
           <section class="top">
             <div class="top__title-wrapper">
-              <h2 class="top__title top__title--main">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h2>
+              <p class="top__title top__title--main">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
               <p class="top__title top__title--grey" aria-hidden="true">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="top__next">
               <canvas class="top__canvas"></canvas>
             </div>
+          </section>
+
+          <div class="section-white" aria-hidden="true">
+            <div class="white"></div>
+          </div>
+
+          <section class="introduction">
+            <div class="introduction__container">
+              <div class="introduction__texts">
+                <div class="introduction__intro">
+                  <p class="introduction__intro-p">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A labore repellendus iusto quasi dolore inventore tempore quo
+                  </p>
+                  <p class="introduction__intro-p">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora perspiciatis aspernatur nam cupiditate?
+                  </p>
+                </div>
+                <hgroup class="introduction__title-wrapper">
+                  <div class="introduction__title introduction__title--black">
+                    <p class="introduction__sub-title">I've never seen this used</p>
+                  </div>
+                  <div class="introduction__title introduction__title--white">
+                    <h2 class="introduction__main-title">Great-axe</h2>
+                  </div>
+                </hgroup>
+                <div class="introduction__feature feature">
+                  <article class="feature__article feature__article--one">
+                    <div class="feature__article__inner">
+                      <div class="feature__deco">
+                        <div class="feature__deco__circle"></div>
+                        <div class="feature__deco__line"></div>
+                      </div>
+                      <h2 class="feature__title"><span class="feature__title-inner">Lorem + Ipsum</span></h2>
+                      <p class="feature__text">
+                        <span class="feature__text-inner"
+                          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates minus dolores expedita vel nobis sapiente
+                          ad!</span
+                        >
+                      </p>
+                    </div>
+                    <div class="feature__article__inner">
+                      <h2 class="feature__title"><span class="feature__title-inner">Strong & Beauty</span></h2>
+                      <p class="feature__text">
+                        <span class="feature__text-inner">
+                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum doloremque alias in harum quibusdam quidem, nihil
+                          tempora,
+                        </span>
+                      </p>
+                    </div>
+                  </article>
+                  <article class="feature__article feature__article--two">
+                    <div class="feature__article__inner">
+                      <div class="feature__deco">
+                        <div class="feature__deco__circle"></div>
+                        <div class="feature__deco__line"></div>
+                      </div>
+                      <h2 class="feature__title"><span class="feature__title-inner">Bypass</span></h2>
+                      <p class="feature__text">
+                        <span class="feature__text-inner"
+                          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro iure delectus nulla iusto atque doloribus
+                          sunt</span
+                        >
+                      </p>
+                    </div>
+                    <div class="feature__article__inner">
+                      <h2 class="feature__title"><span class="feature__title-inner">Hang On</span></h2>
+                      <p class="feature__text">
+                        <span class="feature__text-inner"
+                          >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, ea obcaecati doloribus porro voluptas non
+                          iste.</span
+                        >
+                      </p>
+                    </div>
+                  </article>
+                </div>
+              </div>
+
+              <div class="introduction__canvas-wrapper">
+                <canvas class="introduction__canvas"></canvas>
+              </div>
+
+              <div class="introduction__bg-circle-wrapper">
+                <div class="introduction__bg-circle"></div>
+              </div>
+            </div>
+          </section>
+
+          <section class="last">
+            <p>END</p>
           </section>
         </main>
       </div>
